# estrutura_workshop

./: pyproject.toml
app/pipeline/: extract.py  transform.py
