[tool.poetry]
name = "estrutura-workshop"
version = "0.1.0"
description = "meu projeto de etl"
authors = ["Alecsander Guimaraes <leelecko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
pytest = "^7.4.2"
blue = "^0.9.1"
isort = "^5.12.0"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.2"
pygments = "^2.16.1"
mkdocs-material = "^9.4.4"
pymdown-extensions = "^10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
